hphp/test/zend/bad/ext/reflection/tests/011.php
<?php
$ext = new ReflectionExtension("reflection");
$classes = $ext->getClasses();
echo $classes["ReflectionException"]->getName();
?>
